// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiBankTransaction has the expected html structure 1`] = `
<li-transaction-stub
  block="3436"
  color="#25293F"
  devmode="true"
  time="2042"
>
  <div>
    
      Received 
    <b>
      1234
    </b>
    <span>
       JBCOINS
    </span>
  </div>
   
  <span>
    From A
  </span>
</li-transaction-stub>
`;

exports[`LiBankTransaction should show outgoing transactions 1`] = `
<li-transaction-stub
  block="3438"
  color="#25293F"
  devmode="true"
  time="2052"
>
  <div
    slot="caption"
  >
    
      Sent 
    <b>
      1234
    </b>
    <span>
       JBCOINS
    </span>
  </div>
   
  <span
    slot="details"
  >
    
        To A
      
  </span>
</li-transaction-stub>
`;

exports[`LiBankTransaction should show transactions sent to the sender 1`] = `
<li-transaction-stub
  block="466"
  color="#25293F"
  devmode="true"
  time="1142"
>
  <div
    slot="caption"
  >
    
      Sent 
    <b>
      1234
    </b>
    <span>
       JBCOINS
    </span>
  </div>
   
  <span
    slot="details"
  >
    
        To yourself!
      
  </span>
</li-transaction-stub>
`;
